--- a/AuthentImpl/pom.xml
+++ b/AuthentImpl/pom.xml
@@ -70,6 +70,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+	    <dependency>
+		    <groupId>org.keycloak</groupId>
+		    <artifactId>keycloak-spring-boot-starter</artifactId>
+		</dependency>
+		<dependency>
+		   <groupId>org.hibernate</groupId>
+		   <artifactId>hibernate-validator</artifactId>
+		   <version>6.1.6.Final</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
@@ -81,6 +92,14 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			
+		    <dependency>
+	            <groupId>org.keycloak.bom</groupId>
+	            <artifactId>keycloak-adapter-bom</artifactId>
+	            <version>11.0.3</version>
+	            <type>pom</type>
+	            <scope>import</scope>
+	        </dependency>
 		</dependencies>
 	</dependencyManagement>
 
