Maj des properties - Ajout de la BD Postgresql

--- a/AuthentImpl/src/main/resources/application.properties
+++ b/AuthentImpl/src/main/resources/application.properties
@@ -9,3 +9,14 @@ keycloak.public-client=true
 #keycloak.security-constraints[0].authRoles[0]=user
 #keycloak.security-constraints[0].securityCollections[0].patterns[0]=/customers/*
 keycloak.principal-attribute=preferred_username
+
+
+spring.datasource.url= jdbc:postgresql://localhost:5433/Accountdb
+spring.datasource.username=postgres
+spring.datasource.password=Octave@01
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= update
